ARGO-777 Implement metric: number of messages per topic
