# doc/swagger/swagger.yaml
@@ -972,6 +972,41 @@ paths:
         500:
           $ref: "#/responses/500"
 
+  /projects/{PROJECT}/topics/{TOPIC}:metrics:
+    get:
+      summary: List of metrics related to the specific topic
+      description: |
+        Show a list of topic metrics like the number of messages published
+      parameters:
+        - $ref: '#/parameters/ApiKey'
+        - name: PROJECT
+          in: path
+          description: Name of the project
+          required: true
+          type: string
+        - name: TOPIC
+          in: path
+          description: Name of the topic
+          required: true
+          type: string
+      tags:
+        - Topics
+      responses:
+        200:
+          description: Topic metrics.
+          schema:
+            $ref: '#/definitions/TopicMetrics'
+        400:
+          $ref: "#/responses/400"
+        401:
+          $ref: "#/responses/401"
+        403:
+          $ref: "#/responses/403"
+        404:
+          $ref: "#/responses/404"
+        500:
+          $ref: "#/responses/500"
+
   /projects/{PROJECT}/topics/{TOPIC}:modifyAcl:
     post:
       summary: Modify ACL of a given topic
@@ -1053,6 +1088,14 @@ responses:
       $ref: '#/definitions/ErrorMsg'
 
 definitions:
+
+
+
+  TopicMetrics:
+    type: object
+    properties:
+      mumber_of_messages:
+        type: string
 
   AuthUsers:
     type: object
